tdf#168073: check if xRange is this

And use its own XText implementation object as the range. Also relax
the call to getFromUnoTunnel, to request SvxUnoTextRangeBase that is
actually wanted, not arbitrarily chosen ScCellTextCursor. This makes
this optimized code to also handle ranges returned from ScCellObj's
own getStart() / getEnd().

Change-Id: I4f500b32790f2844fdd7f54818b79b8a29525475
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190085
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit a8ce5af575ea5e05eb7c349d50b4eb08cab983ff)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190097